[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
wild_screen_alloc = {path = ".."}
panic-halt = "0.2.0"
riscv-rt = "0.11.0"

